[package]
name = "openvm-sig-agg"
version = "0.1.0"
edition = "2021"

[lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"
rust.dead_code = "allow"

[lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }

# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
doc_markdown = "allow"

# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }
# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"

[dependencies]
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88d7f059500fd956a7c1eb121e08653e5974728d" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88d7f059500fd956a7c1eb121e08653e5974728d" }
p3-monty-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88d7f059500fd956a7c1eb121e08653e5974728d" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88d7f059500fd956a7c1eb121e08653e5974728d" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "88d7f059500fd956a7c1eb121e08653e5974728d" }

zkhash = { git = "https://github.com/HorizenLabs/poseidon2.git", rev = "bb476b9" }

num-bigint = "0.4"
lazy_static = "1.0"
